# OpusMagnumCpp

./: .gitignore  CMakeLists.txt  README.md
metadata/: embedded_types_limits.cpp
